file(GLOB_RECURSE HEADERS "*.h")
file(GLOB_RECURSE SOURCES "*.cpp")
set(ALL_FILES ${HEADERS} ${SOURCES})
add_library(Engine STATIC ${ALL_FILES})
target_include_directories(Engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${ALL_FILES})

find_package(Vulkan REQUIRED)
target_link_libraries(Engine PUBLIC ${Vulkan_LIBRARIES})  
target_include_directories(Engine PUBLIC ${Vulkan_INCLUDE_DIR})

target_link_libraries(Engine PUBLIC glfw)
target_link_libraries(Engine PUBLIC glm)
target_link_libraries(Engine PUBLIC spdlog)
target_link_libraries(Engine PUBLIC tinygltf)
target_link_libraries(Engine PUBLIC VulkanMemoryAllocator)